--- a/config.json
+++ b/config.json
@@ -1,23 +1,23 @@
 {
     "model" : {
-        "min_input_size":       288,
-        "max_input_size":       448,
-        "anchors":              [55,69, 75,234, 133,240, 136,129, 142,363, 203,290, 228,184, 285,359, 341,260],
-        "labels":               ["racoon"]
+        "min_input_size":       224,
+        "max_input_size":       480,
+        "anchors":              [24,34, 46,84, 68,185, 116,286, 122,97, 171,180, 214,327, 326,193, 359,359],
+        "labels":               ["person"]
     },
 
     "train": {
-        "train_image_folder":   "/home/andy/Desktop/github/kangaroo/images/",
-        "train_annot_folder":   "/home/andy/Desktop/github/kangaroo/annots/",
-        "cache_name":           "kangaroo_train.pkl",
-
-        "train_times":          8,
-        "batch_size":           16,
-        "learning_rate":        1e-4,
+        "train_image_folder":   "/home/experiencor/data/pascal/train/images/",
+        "train_annot_folder":   "/home/experiencor/data/pascal/train/annots/",   
+        "cache_name":           "voc_train.pkl",  
+          
+        "train_times":          1,
+        "batch_size":           8,
+        "learning_rate":        1e-5,
         "nb_epochs":            100,
         "warmup_epochs":        3,
         "ignore_thresh":        0.5,
-        "gpus":                 "0,1",
+        "gpus":                 "0",
 
         "grid_scales":          [1,1,1],
         "obj_scale":            5,
@@ -25,15 +25,15 @@
         "xywh_scale":           1,
         "class_scale":          1,
 
-        "tensorboard_dir":      "logs",
-        "saved_weights_name":   "kangaroo.h5",
+        "tensorboard_dir":      "log_voc",
+        "saved_weights_name":   "model.h5",
         "debug":                true
     },
 
     "valid": {
-        "valid_image_folder":   "",
-        "valid_annot_folder":   "",
-        "cache_name":           "",
+        "valid_image_folder":   "/home/experiencor/data/pascal/valid/images/",
+        "valid_annot_folder":   "/home/experiencor/data/pascal/valid/annots/",
+        "cache_name":           "voc_valid.pkl",
 
         "valid_times":          1
     }
